# Cryptopals-Challenges

./: .gitignore  CMakeLists.txt  readme.md  set1.c  set1.h
include/: set1.h
src/: set1.c  test.c
